@@ -24,10 +24,12 @@ package com.realtime.crossfire.jxclient.gui.textinput;
 import com.realtime.crossfire.jxclient.gui.gui.GUIElementListener;
 import com.realtime.crossfire.jxclient.gui.gui.TooltipManager;
 import com.realtime.crossfire.jxclient.server.crossfire.CrossfireServerConnection;
+import com.realtime.crossfire.jxclient.settings.CommandHistory;
 import java.awt.Color;
 import java.awt.Font;
 import java.awt.Image;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 /**
  * Input field for "query" dialogs.
@@ -49,6 +51,8 @@ public class GUIQueryText extends GUIText {
     /**
      * Creates a new instance.
      * @param server the crossfire server connection for sending reply commands
+     * @param commandHistory the command history to use or <code>null</code> to
+     * disable command history access
      * @param commandCallback the command callback to use
      * @param tooltipManager the tooltip manager to update
      * @param elementListener the element listener to notify
@@ -62,10 +66,9 @@ public class GUIQueryText extends GUIText {
      * element is active
      * @param margin the left margin in pixels
      * @param text the initially entered text
-     * @param enableHistory if set, enable access to command history
      */
-    public GUIQueryText(@NotNull final CrossfireServerConnection server, @NotNull final CommandCallback commandCallback, @NotNull final TooltipManager tooltipManager, @NotNull final GUIElementListener elementListener, @NotNull final String name, @NotNull final Image activeImage, @NotNull final Image inactiveImage, @NotNull final Font font, @NotNull final Color inactiveColor, @NotNull final Color activeColor, final int margin, @NotNull final String text, final boolean enableHistory) {
-        super(commandCallback, tooltipManager, elementListener, name, activeImage, inactiveImage, font, inactiveColor, activeColor, margin, text, enableHistory);
+    public GUIQueryText(@NotNull final CrossfireServerConnection server, @Nullable final CommandHistory commandHistory, @NotNull final CommandCallback commandCallback, @NotNull final TooltipManager tooltipManager, @NotNull final GUIElementListener elementListener, @NotNull final String name, @NotNull final Image activeImage, @NotNull final Image inactiveImage, @NotNull final Font font, @NotNull final Color inactiveColor, @NotNull final Color activeColor, final int margin, @NotNull final String text) {
+        super(commandCallback, commandHistory, tooltipManager, elementListener, name, activeImage, inactiveImage, font, inactiveColor, activeColor, margin, text);
         this.server = server;
     }
 
